@@ -180,7 +180,8 @@ public class FileStatusCache {
                 } while (fileToRefresh != null);
                 if (logEnabled) {
                     LOG.log(Level.FINE, "refreshTask lasted {0} ms for {1} files, {2} files refreshed so far", new Object[] { //NOI18N
-                        new Long(System.currentTimeMillis() - startTime), new Long(files), new Long(refreshedFilesCount)});
+                        Long.valueOf(System.currentTimeMillis() - startTime), Long.valueOf(files), Long.valueOf(refreshedFilesCount)}
+                    );
                 }
             }
         });
