@@ -311,10 +311,10 @@ public class ThreadsPanel extends DataView {
         TableCellRenderer headerRenderer = header.getDefaultRenderer();
         header.setDefaultRenderer(new TimelineHeaderRenderer(headerRenderer, 2, viewManager));
         
-        Number refTime = new Long(1234567);
+        Long refTime = Long.valueOf(1234567);
         
         timeRelRenderer = new ThreadTimeRelRenderer(dataManager);
-        timeRelRenderer.setMaxValue(refTime.longValue());
+        timeRelRenderer.setMaxValue(refTime);
         threadsTable.setDefaultColumnWidth(timeRelRenderer.getNoBarWidth());
         threadsTable.setDefaultRenderer(Long.class, timeRelRenderer);
         
